--- a/base project/index.html
+++ b/base project/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hy,😊 am glad to take you on this project <br> I dare you to <code> fork </code> this repo. <br>
-    Inspired by <strong> Florin Pop </strong> 
+    <!-- SHOWCASE -->
+    <p>   Hy,😊 am glad to take you on this project, I dare you to <code> fork </code> this repo. <br>
+    <small> Special Thanks 🙏<strong> Florin Pop </strong>  </small>
+    </p>
+
+    <!-- FOOTER -->
+    <footer>
+        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid Idris. &copy; 2021 <br>
+        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
+    </footer>
 </body>
 </html>
