--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="myportrait2.jpeg" alt="Abdur-rashid Idris" width="200px" height="200px">
+    <!-- HEADER -->
     <h3> 10 Projects</h3>
+
+    <!-- CONTENT -->
     <ul>
         <li>
             <a target="_blank" href="Harmburger/index.html">Harmbuger Menu</a>
         </li>
     </ul>
+    <!-- FOOTER -->
+    <footer>
+        Built with love 😊 by Abdur-rashid Idris. &copy; 2021 <br>
+        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
+    </footer>
 </body>
 </html>
