--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta links -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10 Project 1 hour</title>
+    <!-- Links -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
+
 <body>
+    <!-- Harmburger button -->
     <button>
         <i class="fas fa-bars"></i>
     </button>
+
+    <nav>
+        <li><a href="#"> Hello </a> </li>
+        <li><a href="#"> world </a> </li>
+        <li><a href="#"> hub </a> </li>
+    </nav>
 </body>
 </html>
