--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -11,15 +11,32 @@
 </head>
 
 <body>
-    <!-- Harmburger button -->
-    <button>
-        <i class="fas fa-bars"></i>
-    </button>
+    <div class="navbar"><a href="../index.html">Home</a></div>
+<div class="contianer">
+    <h3>MERRY CHRISMAS 🎅🎄</h3>
+</div>
+    <!-- Button Icon -->
+    <div class="menu-btn" id="btn">
+        <div class="menu-btn_burger">
 
-    <nav>
+        </div>
+    </div>
+    
+    <!-- Navigation -->
+    <nav class="nav">
+        <ul>
         <li><a href="#"> Hello </a> </li>
         <li><a href="#"> world </a> </li>
         <li><a href="#"> hub </a> </li>
+    </ul>
     </nav>
+
+    <!-- Footer -->
+    <footer>
+        Built with love 😊 by Abdur-rashid Idris. &copy; 2021 <br>
+        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
