--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a target="_blank" href="Harmburger/index.html">Harmbuger Menu 🍔</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Toast Notification 🍄</a>
+            <a class= "disable" target="_blank" href="#">Toast Notification</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Auto write text ✍</a>
@@ -34,7 +34,7 @@
             <a class= "disable" target="_blank" href="#">Background Changer</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Dark Mode toggle 👻</a>
+            <a class= "disable" target="_blank" href="#">Dark Mode toggle</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Carousel</a>
@@ -51,7 +51,7 @@
     <!-- FOOTER -->
     
     <footer>
-        Built with love 😊 by Abdur-rashid Idris. &copy; 2021 <br>
+        Built with love 😊 by Abdur-rashid. &copy; 2021 <br>
         Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
     </footer>
     
