--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -33,7 +33,7 @@
 
     <!-- Footer -->
     <footer>
-        Built with love 😊 by Abdur-rashid Idris. &copy; 2021 <br>
+        Built with love 😊 by Abdur-rashid. &copy; 2021 <br>
         Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
     </footer>
 
