--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -14,6 +14,7 @@
     <div class="navbar"><a href="../index.html">Home</a></div>
 <div class="contianer">
     <h3>MERRY CHRISMAS 🎅🎄</h3>
+    <p>Hy click the 3 white strokes at the top-right corner 👆</p>
 </div>
     <!-- Button Icon -->
     <div class="menu-btn" id="btn">
