--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="myportrait2.jpeg" alt="Abdur-rashid Idris" width="200px" height="200px">
+    <img src="myportrait2.jpg" alt="Abdur-rashid Idris" width="200px" height="200px">
     <p>Team lead HWH Futminna | Community adovocate | Traveller | Writer | Cules | Handsome Boyfriend😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
     <!-- HEADER -->
     
