--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -4,7 +4,7 @@
     <!-- Meta links -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Project 1 hour</title>
+    <title>Harmburger Menu</title>
     <!-- Links -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -13,7 +13,7 @@
 <body>
     <div class="navbar"><a href="../index.html">Home</a></div>
 <div class="contianer">
-    <h3>MERRY CHRISMAS 🎅🎄</h3>
+    <h4>HARMBURGER MENU 🍔</h4>
     <p>Hy click the 3 white strokes at the top-right corner 👆</p>
 </div>
     <!-- Button Icon -->
@@ -26,9 +26,8 @@
     <!-- Navigation -->
     <nav class="nav">
         <ul>
-        <li><a href="#"> Hello </a> </li>
-        <li><a href="#"> world </a> </li>
-        <li><a href="#"> hub </a> </li>
+        <li><a href="../Harmburger/"> Harmbuger</a> </li>
+        <li><a href="../Toast Notification/"> Toast</a> </li>
     </ul>
     </nav>
 
