--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="myportrait2.jpg" alt="Abdur-rashid Idris" width="200px" height="200px">
-    <p>Team lead HWH Futminna | Community adovocate | Traveller |Technical Writer | Cules | Handsome Boyfriend😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
+    <p>Team lead HWH Futminna | Community adovocate | Traveller |Technical Writer | Cules | Yeye Boyfriend😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
     <!-- HEADER -->
     
     <h3> 10 Projects</h3>
@@ -19,7 +19,7 @@
             <a target="_blank" href="Harmburger/index.html">Harmbuger Menu 🍔</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Toast Notification</a>
+            <a target="_blank" href="Toast Notification/index.html">Toast Notification</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Auto write text ✍</a>
