--- a/base project/index.html
+++ b/base project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Project 1 hour</title>
+    <title>Introduction</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
