--- a/Toast Notification/index.html
+++ b/Toast Notification/index.html
@@ -31,7 +31,7 @@
         </div>
     <!-- FOOTER -->
     <footer>
-        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid Idris. &copy; 2021 <br>
+        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
         Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
     </footer>
 
