--- a/Auto write Effect/index.html
+++ b/Auto write Effect/index.html
@@ -22,14 +22,13 @@
             <ul>
             <li><a href="../Harmburger/index.html"> Harmbuger </a> </li>
             <li><a href="../Toast Notification/index.html"> Toast </a> </li>
-            <li><a href="../Auto write Effect/index.html">Auto Text</a></li>
+            <li><a href="../Auto text/index.html">Auto Text</a></li>
 
         </ul>
         </nav>
         <!-- BODY -->
-        <button class="button"> Click me please 🙏</button>
-        <div class="pop">
-            <p class="popmsg">This 10-Javascript-Challenge is awesome </p>
+        <div class="container">
+           Starting...
         </div>
     <!-- FOOTER -->
     <footer>
