--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -28,6 +28,7 @@
         <ul>
         <li><a href="../Harmburger/"> Harmbuger</a> </li>
         <li><a href="../Toast Notification/"> Toast</a> </li>
+        <li><a href="../Auto write Effect/index.html">Auto Text</a></li>
     </ul>
     </nav>
 
