--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a target="_blank" href="Toast Notification/index.html">Toast Notification</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Auto write text ✍</a>
+            <a target="_blank" href="Auto text/index.html">Auto write text ✍</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Popup/ Modal</a>
