--- a/Auto write Effect/index.html
+++ b/Auto write Effect/index.html
@@ -23,7 +23,7 @@
             <li><a href="../Harmburger/index.html"> Harmbuger </a> </li>
             <li><a href="../Toast Notification/index.html"> Toast </a> </li>
             <li><a href="../Auto text/index.html">Auto Text</a></li>
-
+        <li><a href="../Popup Modal/index.html">Pop Modal</a></li>
         </ul>
         </nav>
         <!-- BODY -->
