--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="myportrait2.jpg" alt="Abdur-rashid Idris" width="200px" height="200px">
-    <p>Team lead HWH Futminna | Community adovocate | Traveller |Technical Writer | Cules | Yeye Boyfriend😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
+    <img src="profile.jpg" alt="Abdur-rashid Idris" width="200px" height="200px">
+    <p>Team lead HWH Futminna | Community adovocate | Traveller |Technical Writer | Cules | Your crush😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
     <!-- HEADER -->
     
     <h3> 10 Projects</h3>
@@ -25,7 +25,7 @@
             <a target="_blank" href="Auto write Effect/index.html">Auto write text ✍</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Popup/ Modal</a>
+            <a target="_blank" href="Popup Modal/index.html">Popup/ Modal</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Heart Rain🌹</a>
