--- a/Harmburger/index.html
+++ b/Harmburger/index.html
@@ -29,6 +29,7 @@
         <li><a href="../Harmburger/"> Harmbuger</a> </li>
         <li><a href="../Toast Notification/"> Toast</a> </li>
         <li><a href="../Auto write Effect/index.html">Auto Text</a></li>
+        <li><a href="../Popup Modal/index.html">Pop Modal</a></li>
     </ul>
     </nav>
 
