--- a/Popup Modal/index.html
+++ b/Popup Modal/index.html
@@ -22,15 +22,12 @@
             <ul>
             <li><a href="../Harmburger/index.html"> Harmbuger </a> </li>
             <li><a href="../Toast Notification/index.html"> Toast </a> </li>
-            <li><a href="../Auto write Effect/index.html">Auto Text</a></li>
+            <li><a href="../Auto text/index.html">Auto Text</a></li>
         <li><a href="../Popup Modal/index.html">Pop Modal</a></li>
         </ul>
         </nav>
         <!-- BODY -->
-        <button class="button"> Click me please 🙏</button>
-        <div class="pop">
-            <p class="popmsg">This 10-Javascript-Challenge is awesome </p>
-        </div>
+        
     <!-- FOOTER -->
     <footer>
         Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
