--- a/Popup Modal/index.html
+++ b/Popup Modal/index.html
@@ -27,7 +27,22 @@
         </ul>
         </nav>
         <!-- BODY -->
-        
+        <button class="open">
+            Click Here
+        </button>
+        <div class="modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Hello modal are pretty😍</h2>
+                </div>
+                <div class="modal-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim iure magni, repellendus repudiandae non tempora officiis incidunt earum soluta aut asperiores?</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="close">Close</button>
+                </div>
+            </div>
+        </div>
     <!-- FOOTER -->
     <footer>
         Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
