--- a/Popup Modal/index.html
+++ b/Popup Modal/index.html
@@ -33,10 +33,11 @@
         <div class="modal">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2>Hello modal are pretty😍</h2>
+                    <h2>Modals are pretty😍</h2>
                 </div>
                 <div class="modal-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim iure magni, repellendus repudiandae non tempora officiis incidunt earum soluta aut asperiores?</p>
+                    <p>Do you what you do best, happiness is the only sense of humor to keep you moving?</p>
+                    <small>JuniorX</small>
                 </div>
                 <div class="modal-footer">
                     <button class="close">Close</button>
