--- a/Popup Modal/index.html
+++ b/Popup Modal/index.html
@@ -22,7 +22,7 @@
             <ul>
             <li><a href="../Harmburger/index.html"> Harmbuger </a> </li>
             <li><a href="../Toast Notification/index.html"> Toast </a> </li>
-            <li><a href="../Auto text/index.html">Auto Text</a></li>
+            <li><a href="../Auto write Effect/index.html">Auto Text</a></li>
         <li><a href="../Popup Modal/index.html">Pop Modal</a></li>
         </ul>
         </nav>
