--- a/01 - Harmburger/index.html
+++ b/01 - Harmburger/index.html
@@ -26,10 +26,11 @@
     <!-- Navigation -->
     <nav class="nav">
         <ul>
-        <li><a href="../Harmburger/"> Harmbuger</a> </li>
-        <li><a href="../Toast Notification/"> Toast</a> </li>
-        <li><a href="../Auto write Effect/index.html">Auto Text</a></li>
-        <li><a href="../Popup Modal/index.html">Pop Modal</a></li>
+        <li><a href="../01 - Harmburger/index.html"> Harmbuger</a> </li>
+        <li><a href="../02 - Toast Notification/index.html"> Toast</a> </li>
+        <li><a href="../03 - Auto write Effect/index.html">Auto Text</a></li>
+        <li><a href="../04 - Popup Modal/index.html">Pop Modal</a></li>
+        <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
     </ul>
     </nav>
 
