--- a/05 - Heart Rain/index.html
+++ b/05 - Heart Rain/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toast Notification </title>
-    <link rel="stylesheet" href="../Harmburger/style.css">
+    <link rel="stylesheet" href="../01 - Harmburger/style.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,23 +20,22 @@
         <!-- Navigation -->
         <nav class="nav">
             <ul>
-            <li><a href="../Harmburger/index.html"> Harmbuger </a> </li>
-            <li><a href="../Toast Notification/index.html"> Toast </a> </li>
-            <li><a href="../Auto text/index.html">Auto Text</a></li>
-        <li><a href="../Popup Modal/index.html">Pop Modal</a></li>
+                <li><a href="../01 - Harmburger/index.html"> Harmbuger</a> </li>
+                <li><a href="../02 - Toast Notification/index.html"> Toast</a> </li>
+                <li><a href="../03 - Auto write Effect/index.html">Auto Text</a></li>
+                <li><a href="../04 - Popup Modal/index.html">Pop Modal</a></li>
+                <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
         </ul>
         </nav>
         <!-- BODY -->
-        <div class="container">
-           Starting...
-        </div>
+        
     <!-- FOOTER -->
     <footer>
         Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
         Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
     </footer>
 
-    <script src="../Harmburger/script.js"></script>
+    <script src="../01 - Harmburger/script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
