--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <!-- CONTENT -->
     <ul>
         <li>
-            <a target="_blank" href="Harmburger/index.html">Harmbuger Menu 🍔</a>
+            <a target="_blank" href="01 - Harmburger/index.html">Harmbuger Menu 🍔</a>
         </li>
         <li>
-            <a target="_blank" href="Toast Notification/index.html">Toast Notification</a>
+            <a target="_blank" href="02 - Toast Notification/index.html">Toast Notification</a>
         </li>
         <li>
-            <a target="_blank" href="Auto write Effect/index.html">Auto write text ✍</a>
+            <a target="_blank" href="03 - Auto write Effect/index.html">Auto write text ✍</a>
         </li>
         <li>
-            <a target="_blank" href="Popup Modal/index.html">Popup/ Modal</a>
+            <a target="_blank" href="04 - Popup Modal/index.html">Popup/ Modal</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Heart Rain🌹</a>
+            <a target="_blank" href="05 - Heart Rain/index.html">Heart Rain🌹</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Background Changer</a>
