--- a/05 - Heart Rain/index.html
+++ b/05 - Heart Rain/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toast Notification </title>
+    <title>Heart Rain  </title>
     <link rel="stylesheet" href="../01 - Harmburger/style.css">
     <link rel="stylesheet" href="style.css">
 </head>
