--- a/01 - Harmburger/index.html
+++ b/01 - Harmburger/index.html
@@ -31,6 +31,7 @@
         <li><a href="../03 - Auto write Effect/index.html">Auto Text</a></li>
         <li><a href="../04 - Popup Modal/index.html">Pop Modal</a></li>
         <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
+        <li><a href="../06 - Background Color/index.html">Change BG</a></li>
     </ul>
     </nav>
 
