--- a/06 - Background Color/index.html
+++ b/06 - Background Color/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toast Notification </title>
+    <title>Change Background Color </title>
     <link rel="stylesheet" href="../01 - Harmburger/style.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,10 +25,12 @@
                 <li><a href="../03 - Auto write Effect/index.html">Auto Text</a></li>
                 <li><a href="../04 - Popup Modal/index.html">Pop Modal</a></li>
                 <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
+            <li><a href="../06 - Background Color/index.html">Change BG</a></li>
         </ul>
         </nav>
+        <h3>Hey✌, Happy New year click the button below to grab your background color</h3>
         <!-- BODY -->
-        <button class="open">
+        <button class="button">
             Change Background color
         </button>
     <!-- FOOTER -->
