--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a target="_blank" href="05 - Heart Rain/index.html">Heart Rain🌹</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Background Changer</a>
+            <a target="_blank" href="06 - Background Color/index.html">Background Changer</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Dark Mode toggle</a>
