--- a/05 - Heart Rain/index.html
+++ b/05 - Heart Rain/index.html
@@ -26,7 +26,7 @@
                 <li><a href="../04 - Popup Modal/index.html">Pop Modal</a></li>
                 <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
                 <li><a href="../06 - Background Color/index.html">Change BG</a></li>
-
+                <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
         </ul>
         </nav>
         <!-- BODY -->
