--- a/07 - Dark Mode/index.html
+++ b/07 - Dark Mode/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toast Notification </title>
+    <title>Change Background Color </title>
     <link rel="stylesheet" href="../01 - Harmburger/style.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -30,9 +30,14 @@
         </ul>
         </nav>
         <!-- BODY -->
-        <div class="container">
-           Starting...
-        </div>
+        <div class="toggle">
+            <div class="toggle-bar"><input type="checkbox" id="toggle" name="toggle"><label for="toggle">Dark Theme</label>
+            </div>
+        <h1>
+            Jummah Mubaraq 🕌 
+        </h1>
+        <h3> <cite> The prophet said The best among you is the one who learn the Qur'an and teaches it </cite></h3>
+    </div>
     <!-- FOOTER -->
     <footer>
         Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
