--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a target="_blank" href="06 - Background Color/index.html">Background Changer</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Dark Mode toggle</a>
+            <a target="_blank" href="07 - Dark Mode/index.html">Dark Mode toggle</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Carousel</a>
