--- a/06 - Background Color/index.html
+++ b/06 - Background Color/index.html
@@ -25,7 +25,9 @@
                 <li><a href="../03 - Auto write Effect/index.html">Auto Text</a></li>
                 <li><a href="../04 - Popup Modal/index.html">Pop Modal</a></li>
                 <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
-            <li><a href="../06 - Background Color/index.html">Change BG</a></li>
+                <li><a href="../06 - Background Color/index.html">Change BG</a></li>
+                <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
+
         </ul>
         </nav>
         <h3>Hey✌, Happy New year click the button below to grab your background color</h3>
