--- a/07 - Dark Mode/index.html
+++ b/07 - Dark Mode/index.html
@@ -30,20 +30,17 @@
         </ul>
         </nav>
         <!-- BODY -->
-        <div class="toggle">
-            <div class="toggle-bar"><input type="checkbox" id="toggle" name="toggle"><label for="toggle">Dark Theme</label>
+        <div class="darkTheme">
+            <div><input type="checkbox" name="toggle" id="toggle" ><label for="toggle">Dark Theme</label>
             </div>
         <h1>
             Jummah Mubaraq 🕌 
         </h1>
-        <h3> <cite> The prophet said The best among you is the one who learn the Qur'an and teaches it </cite></h3>
+        <p> <cite> The prophet said The best among you is the one who learn the Qur'an and teaches it </cite></p>
+        <h5>Click the Dark Theme 👆</h5>
     </div>
     <!-- FOOTER -->
-    <footer>
-        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
-        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
-    </footer>
-
+   
     <script src="../01 - Harmburger/script.js"></script>
     <script src="script.js"></script>
 </body>
