--- a/01 - Harmburger/index.html
+++ b/01 - Harmburger/index.html
@@ -33,6 +33,7 @@
         <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
         <li><a href="../06 - Background Color/index.html">Change BG</a></li>
         <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
+        <li><a href="../08 - Carousel/index.html">Carousels</a></li>
     </ul>
     </nav>
 
