--- a/08 - Carousel/index.html
+++ b/08 - Carousel/index.html
@@ -27,20 +27,16 @@
                 <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
                 <li><a href="../06 - Background Color/index.html">Change BG</a></li>
                 <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
+                <li><a href="../08 - Carousel/index.html">Carousels</a></li>
         </ul>
         </nav>
         <!-- BODY -->
-        <div class="darkTheme">
-            <div><input type="checkbox" name="toggle" id="toggle" ><label for="toggle">Dark Theme</label>
-            </div>
-        <h1>
-            Jummah Mubaraq 🕌 
-        </h1>
-        <p> <cite> The prophet said The best among you is the one who learn the Qur'an and teaches it </cite></p>
-        <h5>Click the Dark Theme 👆</h5>
-    </div>
+       
     <!-- FOOTER -->
-   
+    <footer>
+        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
+        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
+    </footer>
     <script src="../01 - Harmburger/script.js"></script>
     <script src="script.js"></script>
 </body>
