--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a target="_blank" href="07 - Dark Mode/index.html">Dark Mode toggle</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Carousel</a>
+            <a target="_blank" href="08 - Carousel/index.html">Carousel</a>
         </li>
         <li>
             <a class= "disable" target="_blank" href="#">Sound Board</a>
