--- a/07 - Dark Mode/index.html
+++ b/07 - Dark Mode/index.html
@@ -27,16 +27,15 @@
                 <li><a href="../05 - Heart Rain/index.html">Heart Rain</a></li>
                 <li><a href="../06 - Background Color/index.html">Change BG</a></li>
                 <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
+                <li><a href="../08 - Carousel/index.html">Carousels</a></li>
         </ul>
         </nav>
         <!-- BODY -->
         <div class="darkTheme">
             <div><input type="checkbox" name="toggle" id="toggle" ><label for="toggle">Dark Theme</label>
             </div>
-        <h1>
-            Jummah Mubaraq 🕌 
-        </h1>
-        <p> <cite> The prophet said The best among you is the one who learn the Qur'an and teaches it </cite></p>
+        <h1>Contrast</h1>
+        <p> <cite> Always specify alot of shades for your design too many gray is never too much </cite></p>
         <h5>Click the Dark Theme 👆</h5>
     </div>
     <!-- FOOTER -->
