--- a/08 - Carousel/index.html
+++ b/08 - Carousel/index.html
@@ -31,7 +31,15 @@
         </ul>
         </nav>
         <!-- BODY -->
-       
+       <div class="carousel">
+           <div class="image-container" id="imgs">
+               <img src="images/pic (1).jpg" alt="">
+               <img src="images/pic (2).jpg" alt="">
+               <img src="images/pic (3).jpg" alt="">
+               <img src="images/pic (4).jpg" alt="">
+           </div>
+
+       </div>
     <!-- FOOTER -->
     <footer>
         Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
