--- a/06 - Background Color/index.html
+++ b/06 - Background Color/index.html
@@ -28,6 +28,7 @@
                 <li><a href="../06 - Background Color/index.html">Change BG</a></li>
                 <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
                 <li><a href="../08 - Carousel/index.html">Carousels</a></li>
+                <li><a href="../09 - Sound Board/index.html">Sound Board</a></li>
         </ul>
         </nav>
         <h3>Hey✌, Happy New year click the button below to grab your background color</h3>
