--- a/09 - Sound Board/index.html
+++ b/09 - Sound Board/index.html
@@ -28,23 +28,23 @@
                 <li><a href="../06 - Background Color/index.html">Change BG</a></li>
                 <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
                 <li><a href="../08 - Carousel/index.html">Carousels</a></li>
+                <li><a href="../09 - Sound Board/index.html">Sound Board</a></li>
         </ul>
         </nav>
         <!-- BODY -->
-       <div class="carousel">
-           <div class="image-container" id="imgs">
-               <img src="images/pic (1).jpg" alt="">
-               <img src="images/pic (2).jpg" alt="">
-               <img src="images/pic (3).jpg" alt="">
-               <img src="images/pic (4).jpg" alt="">
-           </div>
-
-       </div>
-    <!-- FOOTER -->
-    <footer>
-        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
-        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
-    </footer>
+        <div class="darkTheme">
+            <div><input type="checkbox" name="toggle" id="toggle" ><label for="toggle">Dark Theme</label>
+            </div>
+        <h1>Contrast</h1>
+        <p> <cite> Always specify alot of shades for your design too many gray is never too much </cite></p>
+        <h5>Click the Dark Theme 👆</h5>
+    </div>
+   <!-- FOOTER -->
+   <footer>
+    Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
+    Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
+</footer>
+   
     <script src="../01 - Harmburger/script.js"></script>
     <script src="script.js"></script>
 </body>
