--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a target="_blank" href="08 - Carousel/index.html">Carousel</a>
         </li>
         <li>
-            <a class= "disable" target="_blank" href="#">Sound Board</a>
+            <a target="_blank" href="09 - Sound Board/index.html">Sound Board</a>
         </li>
         <li>
             <u><a class= "disable" target="_blank" href="#">Zoom effect 🔍</a></u>
