--- a/01 - Harmburger/index.html
+++ b/01 - Harmburger/index.html
@@ -34,6 +34,7 @@
         <li><a href="../06 - Background Color/index.html">Change BG</a></li>
         <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
         <li><a href="../08 - Carousel/index.html">Carousels</a></li>
+        <li><a href="../09 - Sound Board/index.html">Sound Board</a></li>
     </ul>
     </nav>
 
