--- a/08 - Carousel/index.html
+++ b/08 - Carousel/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Background Color </title>
+    <title>Carousels </title>
     <link rel="stylesheet" href="../01 - Harmburger/style.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,6 +28,7 @@
                 <li><a href="../06 - Background Color/index.html">Change BG</a></li>
                 <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
                 <li><a href="../08 - Carousel/index.html">Carousels</a></li>
+                <li><a href="../09 - Sound Board/index.html">Sound Board</a></li>
         </ul>
         </nav>
         <!-- BODY -->
