--- a/09 - Sound Board/index.html
+++ b/09 - Sound Board/index.html
@@ -32,13 +32,12 @@
         </ul>
         </nav>
         <!-- BODY -->
-        <div class="darkTheme">
-            <div><input type="checkbox" name="toggle" id="toggle" ><label for="toggle">Dark Theme</label>
-            </div>
-        <h1>Contrast</h1>
-        <p> <cite> Always specify alot of shades for your design too many gray is never too much </cite></p>
-        <h5>Click the Dark Theme 👆</h5>
-    </div>
+            <audio id="applause" src="sounds/applause.mp3"></audio>
+            <audio id="boo" src="sounds/boo.mp3"></audio>
+            <audio id="gasp" src="sounds/gasp.mp3"></audio>
+            <audio id="tada" src="sounds/tada.mp3"></audio>
+            <audio id="victory" src="sounds/victory.mp3"></audio>
+            <audio id="wrong" src="sounds/wrong.mp3"></audio>
    <!-- FOOTER -->
    <footer>
     Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
