--- a/09 - Sound Board/index.html
+++ b/09 - Sound Board/index.html
@@ -35,6 +35,7 @@
             <audio id="applause" src="sounds/applause.mp3"></audio>
             <audio id="gasp" src="sounds/gasp.mp3"></audio>
             <audio id="tada" src="sounds/tada.mp3"></audio>
+            <p>Click a button </p>
    <!-- FOOTER -->
    <footer>
     Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
