--- a/01 - Harmburger/index.html
+++ b/01 - Harmburger/index.html
@@ -35,6 +35,7 @@
         <li><a href="../07 - Dark Mode/index.html">Dark Mode</a> </li>
         <li><a href="../08 - Carousel/index.html">Carousels</a></li>
         <li><a href="../09 - Sound Board/index.html">Sound Board</a></li>
+        <li><a href="../10 - Zoom Effects/index.html">Zoom Effects</a></li>
     </ul>
     </nav>
 
