--- a/10 - Zoom Effects/index.html
+++ b/10 - Zoom Effects/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Board </title>
+    <title>Zoom Effects </title>
     <link rel="stylesheet" href="../01 - Harmburger/style.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,17 +33,14 @@
         </ul>
         </nav>
         <!-- BODY -->
-            <audio id="applause" src="sounds/applause.mp3"></audio>
-            <audio id="gasp" src="sounds/gasp.mp3"></audio>
-            <audio id="tada" src="sounds/tada.mp3"></audio>
-
-            
-   <!-- FOOTER -->
-   <footer>
-    Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
-    Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
-</footer>
-   
+        <div class="container">
+            <img src="lady.jpg" alt="">
+        </div>
+    <!-- FOOTER -->
+    <footer>
+        Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
+        Code on <a href="https://github.com/Abdur-rasheedidris19/10-Javascript-Challenge">  Github </a>
+    </footer>
     <script src="../01 - Harmburger/script.js"></script>
     <script src="script.js"></script>
 </body>
