--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a target="_blank" href="09 - Sound Board/index.html">Sound Board</a>
         </li>
         <li>
-            <u><a class= "disable" target="_blank" href="#">Zoom effect 🔍</a></u>
+            <u><a target="_blank" href="10 - Zoom Effects/index.html">Zoom effect 🔍</a></u>
         </li>
     
     </ul>
