--- a/01 - Harmburger/index.html
+++ b/01 - Harmburger/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Body content -->
     <div class="navbar"><a href="../index.html">Home</a></div>
 <div class="contianer">
     <h4>HARMBURGER MENU 🍔</h4>
