--- a/09 - Sound Board/index.html
+++ b/09 - Sound Board/index.html
@@ -32,7 +32,7 @@
                 <li><a href="../10 - Zoom Effects/index.html">Zoom Effects</a></li>
         </ul>
         </nav>
-        <!-- BODY -->
+        <!-- Sound-->
             <audio id="applause" src="sounds/applause.mp3"></audio>
             <audio id="gasp" src="sounds/gasp.mp3"></audio>
             <audio id="tada" src="sounds/tada.mp3"></audio>
