--- a/10 - Zoom Effects/index.html
+++ b/10 - Zoom Effects/index.html
@@ -34,7 +34,7 @@
         </nav>
         <!-- BODY -->
         <div class="container">
-            <img src="lady.jpg" alt="">
+            <img src="lady.jpg" alt=" A lady wearing an hijab">
         </div>
     <!-- FOOTER -->
     <footer>
