--- a/04 - Popup Modal/index.html
+++ b/04 - Popup Modal/index.html
@@ -36,6 +36,9 @@
         <button class="open">
             Click Here
         </button>
+
+        <!-- Modal Tags -->
+
         <div class="modal">
             <div class="modal-content">
                 <div class="modal-header">
@@ -50,6 +53,7 @@
                 </div>
             </div>
         </div>
+        
     <!-- FOOTER -->
     <footer>
         Inspired By <a href="https://www.florin-pop.com/">Florin Pop😊</a>  re-created  by Abdur-rashid. &copy; 2021 <br>
