--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="profile.jpg" alt="Abdur-rashid Idris" width="200px" height="200px">
-    <p>Team lead HWH Futminna | Community adovocate | Traveller |Technical Writer | Cules | Your crush😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
+    <p>Team lead HWH Futminna | Community adovocate | Traveller |Technical Writer | Cules | Special boy😘 <br> <small><a target="_blank" href="https://twitter.com/Rashjnr20">@Junior_xxv</a></small></p>
     <!-- HEADER -->
     
     <h3> 10 Projects</h3>
